...
                const Spacer(),
                PrimaryButton(
                  onTap: () async {
                    dashboardCubit.logOut();
                    await NavigationUtil.I.replaceAllRoute(const LoginRoute());
                  },
                  text: 'Logout',
                  color: AppColors.error,
                  expandWidth: true,
                ),
              ],
            ),
          ),
...
